--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,46 +1,43 @@
-body, html {height: 100%}
+body,
+html {
+	height: 100%
+}
 
-body {font-family: "Amatic SC", sans-serif}
+body {
+	font-family: "Amatic SC", sans-serif
+}
 
-.menu {display: none}
+.menu {
+	display: none
+}
 
 .drag-text {
-    font-size:30px;
+	font-size: 30px;
 }
 
 .bgimg {
-   background-repeat: no-repeat;
-   background-size: cover;
-   background-image: url(../img/image.png);
-   min-height: 100%;
-   overflow:hidden;
- }
-
-.drop-box {
-  width: 800px;
-  height: 350px;
-  border: 1px dashed blue;
-  position:absolute;
-  margin: auto; left: 0; right: 0; top: 0; bottom: 0;
-  overflow: hidden;
-  overflow-y: auto;
-  pointer-events: none;
-
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-image: url(../img/image.png);
+	min-height: 100%;
+	overflow: hidden;
 }
 
 .submit {
-    top: 600px;
-    margin-left: -30px;
-    position:absolute;
+	top: 600px;
+	margin-left: -30px;
+	position: absolute;
 }
 
-
-.dropfile {
-    font-size:30px;
-    text-align: right;
-    width: 800px;
-    height: 350px;
-    position:absolute;
-    margin: auto; left: 0; right: 0; top: 0; bottom: 0;
+.drop-box{
+	width: 800px;
+	height: 350px;
+	border: 1px dashed blue;
 }
 
+.drop-file-button {
+	font-size: 30px;
+	text-align: right;
+	width: 100%;
+	height: 100%;
+}
