--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -22,7 +22,8 @@
         <div class="w3-bar w3-xlarge w3-black w3-opacity w3-hover-opacity-off" id="myNavbar">
             <a href="#" class="w3-bar-item w3-button">HOME</a>
             <a href="#about" class="w3-bar-item w3-button">ABOUT</a>
-            <a id="logout_nav" class="w3-button w3-right w3-bar-item w3-border w3-border-red w3-round-large" href="/logout/">Log
+            <a id="logout_nav" class="w3-button w3-right w3-bar-item w3-border w3-border-red w3-round-large"
+                href="/logout/">Log
                 Out</a>
             <a id="welcome_nav" class="w3-button w3-right w3-bar-item w3-border w3-border-red w3-round-large">Hello,
                 {{user}}</a>
@@ -40,12 +41,18 @@
             <span class="w3-tag w3-xlarge w3-hide-small">You can convert your image to a high revolution version.</span>
         </div>
 
-        <div class="w3-text-white  w3-center">
-            <form>
-                <input type="file" id="myfile" name="myfile" class="w3-text-white dropfile">
-                <input type="submit" id="submit" class="w3-button w3-xxlarge w3-black submit w3-center">
+        <div class="w3-display-middle w3-text-white drop-box">
+            <form action={% url 'processing' %} method="post" enctype="multipart/form-data">
+                {% csrf_token %}
+                <input type="file" name="pic" class="w3-text-white drop-file-button" required>
+                <input type="submit" class="w3-button w3-xxlarge w3-black w3-center w3-display-bottommiddle">
+                <fieldset class="w3-display-bottomright">
+                    <legend>Select a SR level:</legend>
+                    <label><input type="radio" name="level" value="2x" class="w3-check w3-radio" checked>2x</label>
+                    <label><input type="radio" name="level" value="4x" class="w3-check w3-radio">4x</label>
+                    <label><input type="radio" name="level" value="4xp" class="w3-check w3-radio">4x+</label>
+                </fieldset>
             </form>
-            <div id="drop" class="drop-box"></div>
         </div>
 
     </header>
