--- a/static/css/style.css
+++ b/static/css/style.css
@@ -24,9 +24,9 @@ body {
 }
 
 .submit {
-	top: 600px;
+	/* top: 600px; */
 	margin-left: -30px;
-	position: absolute;
+	/* position: absolute; */
 }
 
 .drop-box{
@@ -38,6 +38,8 @@ body {
 .drop-file-button {
 	font-size: 30px;
 	text-align: right;
-	width: 100%;
-	height: 100%;
+	width: 800px;
+	height: 350px;
+	position:absolute;
+	margin: auto; left: 0; right: 0; top: 0; bottom: 0;
 }
