edit about page

--- a/templates/login/index.html
+++ b/templates/login/index.html
@@ -117,9 +117,22 @@
         <div class="w3-content">
             <h1 class="w3-center w3-jumbo" style="margin-bottom:64px">About</h1>
             <p>The system can recover a given low-resolution image into a corresponding high-resolution image</p>
-            <p><strong>Group Member</strong> XXX<img src="SRGAN/w3images/chef.jpg" style="width:150px"
-                    class="w3-circle w3-right" alt="IMG"></p>
-            <p>contact email: </p>
+            <p><div class="w3-row">
+                <div class="w3-col s6">
+                    <p><strong>Group Member</strong> </p>
+                    <p>Chen Zihao</p>
+                    <p>Ku Maier</p>
+                    <p>Liu Haoran</p>
+                    <p>Shen Jingyu</p>
+                </div>
+                <div class="w3-col s6">
+                    <p><strong>contact email</strong></p>
+                    <p>e0983252@nus.edu.sg</p>
+                    <p>e0983216@u.nus.edu</p>
+                    <p>haoran.h.liu@u.nus.edu</p>
+                    <p>jingyu.shen@u.nus.edu</p>
+                </div>
+            </div></p>
             <h1><b>Why not register to better your experience!</b></h1>
             <div class="w3-row">
                 <div class="w3-col s6">
@@ -127,8 +140,8 @@
                     <p>registered member</p>
                 </div>
                 <div class="w3-col s6">
-                    <p>xxx</p>
-                    <p>xxx</p>
+                    <p>limit to 2X Upscaling</p>
+                    <p>enjoy your 4X Upscaling, or even 4X plus!</p>
 
                 </div>
             </div>
